--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,9 +1,9 @@
 ---
-name: Tails Azimuth
+name: Anderson  Morillo
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
+occupation: Estudiantes de la Universidad Tecnológica de Bolivar 
+company: Anderson Morillo
+email: andersonmorillodiaz31@gmail.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
 github: https://github.com
